Update Node to 6.7.0, update npm devDependencies to latest, fix tasks accordingly

--- a/docs/templates/tasks.hbs
+++ b/docs/templates/tasks.hbs
@@ -14,8 +14,8 @@
 ## Specific tasks
 
 {{#globals}}
-{{#isnt name "`gulp`"}}
+{{#unless (equal name "`gulp`")}}
 ### {{{name}}}
 {{>description}}
-{{/isnt}}
+{{/unless}}
 {{/globals}}
